# CoBang

./: README.rst  meson.build
cobang/: app.py  consts.py  resources.py  ui.py
data/: about.ui.in  cobang.ui  cobang_mod.ui  meson.build  url-display.ui  vn.hoabinh.quan.CoBang.gresource.xml  wifi-display.ui
exe/: meson.build
